templates/aws-config-collector-tpl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-<intergation_id>
  namespace: tenant-<tenant_id>
  annotations:
    tenant: <tenant_id>
    collector: <intergation_id>
    type: aws
spec:
  selector:
    matchLabels:
      app: aws-<intergation_id>
  template:
    metadata:
      labels:
        app: aws-<intergation_id>
    spec:
      volumes:
        - name:  aws-alloy-<intergation_id>
          secret:
            secretName:  aws-alloy-<intergation_id>
        - name: aws-logstash-<intergation_id>
          secret:
            secretName: aws-logstash-<intergation_id>
      containers:
      - name: aws-alloy-<intergation_id>
        image: grafana/alloy:v1.12.2
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        args:
        - run
        - /etc/alloy/config.alloy
        - --storage.path=/var/lib/alloy/data
        - --disable-reporting
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: aws-alloy-<intergation_id>
            readOnly: true
            mountPath: /etc/alloy/
      - name: logstash
        image: public.ecr.aws/k9v9d5v2/admin-tools/crd-collectors/logstash:v1.0.1
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /
            port: 9091
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 9091
        - containerPort: 9090
        args:
          - "-f"
          - "/configs/pipeline.conf"
        volumeMounts:
          - name: aws-logstash-<intergation_id>
            readOnly: true
            mountPath: /configs/
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
